<resources>
    <string name="app_name">MyPrayer</string>
    <string name="white_background">White Background</string>
    <string name="button">Button</string>
    <string name="home">Home</string>
    <string name="Qibla">Qibla</string>
    <string name="PrayerTimes">Prayer Times</string>
    <string name="Quran">Quran</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="playlist_cover">playlist Cover</string>
    <string name="previous">previous</string>
    <string name="play">Play</string>
    <string name="next_surrah">next Surrah</string>
    <string name="title_activity_quran">QuranActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="gps_settings_title">GPS settings</string>
    <string name="gps_settings_text">GPS is not enabled, you must activate it first from the settings to get the Qibla direction.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="surah_title">Surah Title</string>
    <string name="todo">TODO</string>
    <string name="album_cover">Album Cover</string>
    <string name="repeat_button">Repeat Button</string>
    <string name="previous_button">previous Button</string>
    <string name="play_pause_button">Play/Pause Button</string>
    <string name="next_button">next button</string>
    <string name="list_button">List button</string>
    <string name="list_btn">list_btn</string>
    <string name="next_btn">next_btn</string>
    <string name="play_pause_btn">play_pause_btn</string>
    <string name="previous_btn">previous_btn</string>
    <string name="repeat_btn">repeat_btn</string>
    <string name="locationunready">Please check the GPS settings and try again</string>
    <string name="coord">Coordinates:</string>
    <string name="qibladirection">Qiblah:</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="fromnorth">Degrees from the north</string>
    <string name="gpsplz">Check the GPS settings to be able to determine the direction of the Qiblah</string>
    <string name="consignes">Instructions</string>
    <string name="qiblatips">To get accurate orientation, please place the phone on a flat surface, check the GPS settings, then re-enter this menu.</string>
</resources>