<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/home_ic"
        android:icon="@drawable/ic_home__1_"
        android:title="@string/home"
        />

    <item
        android:id="@+id/Time_ic"
        android:icon="@drawable/ic_clock"
        android:title="@string/PrayerTimes"
        />
    <item
        android:id="@+id/Qibla_ic"
        android:icon="@drawable/ic_compass_svgrepo_com__1_"
        android:title="@string/Qibla"
        />
    <item
        android:id="@+id/Quran_ic"
        android:icon="@drawable/ic_headphones"
        android:title="@string/Quran"
        app:showAsAction="always"

        />

</menu>